# careerup-cv

./: .replit  ai_engine.py  app.py  auth_gate.py  export_utils.py  file_processor.py  persistence.py  pyproject.toml  rebuild_prompt.md  replit.md  styles.py  whatsapp_connect.py
.streamlit/: config.toml
attached_assets/: Pasted--2026--1772182658859_1772182658859.txt  Pasted--2026--1772185374499_1772185374500.txt  cv_improved_(12)_1770565576418.docx  cv_improved_(13)_1770566965243.docx  cv_improved_(15)_1772256530485.docx  cv_improved_(28)_1775765919275.docx
components/section_editor/: __init__.py  index.html
scripts/: post-merge.sh
tests/: test_empty_filter.py
