[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "openai>=2.17.0",
    "pdfplumber>=0.11.9",
    "python-bidi>=0.6.7",
    "python-docx>=1.2.0",
    "reportlab>=4.4.9",
    "streamlit>=1.54.0",
    "tenacity>=9.1.3",
]
